--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ I also like participating in algorithmic programming contests.
 Before joining IISc, I was a data analyst at <a href="https://www.loylty.com/">loylty rewardz</a> Mumbai for an year and half.
 I worked on loylty rewardz's campaign management system for merchants.
 My work involved campaign response modelling using machine learning and fast campaign deployment.
-Before that, I was a <abbr title="Bachelor of Technology">B.Tech.</abbr> Computer Science student
+Before that, I was a <abbr title="Bachelor of Technology">B.Tech.</abbr> Electrical Engineering student
 at <a href="http://www.iitk.ac.in"
 title="Indian Institute of Technology , Kanpur">IIT&nbsp;Kanpur</a>.
 </p>
