--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 <p>
-I'm an MTech Research student at
+I'm an MTech student at
 <a href="https://www.csa.iisc.ac.in/">IISc Bangalore's Computer Science and Automation Department</a>.
 My academic interests are deep reinforcement learning, machine learning and algorithms.
 I also like participating in algorithmic programming contests.
@@ -63,11 +63,12 @@ title="Indian Institute of Technology , Kanpur">IIT&nbsp;Kanpur</a>.
 </p>
 
 <p>
+<!--
 I <a href="https://www.youtube.com/watch?v=xYrnQMHfDNE&list=PLACN_dyOcd_WSIzGV-4hVCQyQFmzKH1kb">juggle</a>
 in my free time. I can juggle up to 5 balls and 3
 <a href="https://en.wikipedia.org/wiki/Juggling_club">clubs</a>.
 </p>
-
+-->
 <h2><a href="https://sharmaeklavya2.github.io/blog/"> Blog </a></h2>
 
 <h2><a href="sport-programming.html" target="_self"> Sport Programming </a></h2>
