Add link to personal github blog and make changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="I'm Sai Sravan Reddy T D,
         a computer science student at IISc Bangalore.
-        I like computer science, math and fiddling with electronics." />
+        I like computer science, math and life." />
     <meta name="keywords" content="saishravan, SaiSravanReddy1,
         IISc, IIT, Kanpur, 
         programming, programmer, computer science" />
@@ -35,8 +35,8 @@
             <svg class="icon"><title>YouTube channel</title>
                 <use xlink:href="img/sprites.svg#fa-youtube"/></svg>
         </a>
-        <a title="Codeforces: eku" href="https://codeforces.com/profile/eku">
-            <svg class="icon"><title>Codeforces: eku</title>
+        <a title="Codeforces: saisravanreddy" href="https://codeforces.com/profile/saisravanreddy">
+            <svg class="icon"><title>Codeforces: saisravanreddy</title>
                 <use xlink:href="img/sprites.svg#codeforces"/></svg>
         </a>
     </div>
@@ -69,11 +69,15 @@ in my free time. I can juggle up to 5 balls and 3
 <a href="https://en.wikipedia.org/wiki/Juggling_club">clubs</a>.
 </p>
 -->
-<h2><a href="https://sharmaeklavya2.github.io/blog/"> Blog </a></h2>
+<h2><a href="https://saishravan.github.io/github_pages_with_jekyll/"> Blog </a></h2>
+
+<!--
 
 <h2><a href="sport-programming.html" target="_self"> Sport Programming </a></h2>
 
 <h2><a href="projects.html" target="_self"> Projects </a></h2>
+
+-->
 
 </body>
 </html>
